<resources>
    <string name="hello">Здравствуйте,</string>
    <string name="app_name">Type!</string>
    <string name="app_dev_name">GENS</string>
    <string name="app_version">1.0.0.0</string>
    <string name="app_build">1</string>

    <string name="app_version_header">Версия</string>
    <string name="app_build_header">Сборка</string>
    <string name="app_dev_header">О разработчике</string>
    <string name="app_dev_site_header">Сайт</string>
    <string name="app_dev_site">genscode.xyz</string>
    <string name="app_show_dev_info">Показать информацию \nо разработчике</string>
    <string name="app_hide_dev_info">Скрыть информацию \nо разработчике</string>

    <string name="design_header">Оформление</string>
    <string name="design_theme_header">Тема</string>
    <string name="design_theme_day">Дневная</string>
    <string name="design_theme_night">Ночная</string>
    <string name="design_theme_system">Системная</string>
    <string name="design_optimization_header">Оптимизация</string>
    <string name="design_optimization_blur">Блюр</string>

    <string name="message_bt2">Отмена</string>
    <string name="message_bt">Понятно</string>
    <string name="message_edited">ред.</string>
    <string name="message_unread">•</string>
    <string name="message_today">Сегодня</string>
    <string name="message_tomorrow">Вчера</string>
    <string name="message_remove">Удалить</string>
    <string name="message_removed"><i>Удаленное сообщение</i></string>
    <string name="message_edit">Редактировать</string>

    <string name="chat_type">Сообщение</string>
    <string name="chat_no_chats">Начните общение во вкладке контактов 📘</string>
    <string name="chat_read">Пометить как прочитанное</string>
    <string name="chat_removed">Уведомление</string>
    <string name="chat_removed_content">Этот чат был удален собеседником.</string>
    <string name="chat_remove">Удалить</string>
    <string name="chat_remove_content">Вы уверены, что хотите удалить чат для всех без возможности восстановления?</string>
    <string name="chat_error_loading_header">Ошибка</string>

    <string name="user_profile">Профиль</string>
    <string name="user_removed">Удаленный аккаунт</string>
    <string name="user_your">Вы</string>
    <string name="user_type">Написать</string>
    <string name="user_call">Позвонить</string>
    <string name="user_not_registered_header">Внимание</string>
    <string name="user_not_registered_content">Этот номер не зарегестрирован в Type! Вы не сможете начать диалог 😥.</string>
    <string name="user_phone_hidden">Телефон: скрыт</string>
    <string name="user_hidden">Не указано</string>
    <string name="user_invalid">Неизвестный</string>
    <string name="user_search">Найти</string>

    <string name="loading">Подождите…</string>
    <string name="apply">Применить</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="get_sms">Получить СМС</string>
    <string name="sign_in">Войдите в аккаунт</string>
    <string name="type_sms">Введите код из СМС</string>
    <string name="type_name">Как вас зовут?</string>
    <string name="type_sms_et">Код</string>
    <string name="type_name_et">Имя</string>
    <string name="waiting_for_network">Ожидание сети…</string>

    <string name="phone">Телефон</string>
    <string name="country_code_ru">+7</string>
    <string name="invalid_code">Вы ввели неверный код</string>
    <string name="invalid_phone">Вы ввели неверный телефон</string>
    <string name="invalid_name">Вы ввели некорректное имя</string>
    <string name="quota_auth">Квота сообщений израсходована</string>

    <string name="privacy_policy">Нажимая на кнопку \"Получить СМС\", Вы соглашаетесь с <b>политикой конфиденциальности</b></string>

    <string name="messenger">Сообщения</string>
    <string name="contacts">Контакты</string>
    <string name="settings">Настройки</string>

    <string name="settings_sign_out">Выйти</string>
    <string name="settings_info">О себе</string>
    <string name="settings_app">О приложении</string>
    <string name="settings_change">Изменить</string>
    <string name="settings_configure">Настроить</string>
    <string name="settings_question">Узнать</string>
    <string name="settings_add">Добавить</string>

    <string name="contacts_search">Найти в Type!</string>
    <string name="contacts_type">Написать</string>
    <string name="contacts_no_contacts">У вас нету контактов.</string>
    <string name="contacts_zero_find_contacts">Такого контакта нету.</string>
    <string name="contacts_permission_header">Внимание</string>
    <string name="contacts_permission_content">Чтобы найти своих знакомых, Вы должны разрешить приложению доступ к контактам.</string>
    <string name="contacts_permission_allow">Разрешить</string>
    <string name="contacts_permission_back">Отмена</string>
    <string name="contacts_permission_denied">Нажмите, чтобы разрешить приложению доступ к контактам.</string>

    <string name="error">Что-то пошло не так 😥</string>
    <string name="error_auth">Произошла ошибка авторизации</string>
    <string name="chat_error_loading">Не удалось загрузить чат(ы) 😥.</string>

</resources>