<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ContactsFragment"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:id="@+id/llEditChange"
        style="@style/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:animateLayoutChanges="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <EditText
            android:id="@+id/etContactsSearch"
            style="@style/textSecondary"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#00ffffff"
            android:fontFamily="@font/fira_sans"
            android:gravity="center_vertical"
            android:hint="@string/contacts_search"
            android:importantForAutofill="no"
            android:inputType="textAutoCorrect|textCapSentences"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        tools:visibility="visible"
        android:visibility="gone"
        android:id="@+id/llContactsStartDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llEditChange"
        android:background="@drawable/item_settings_both_day"
        >
        <LinearLayout
            style="@style/item"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/textSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:alpha="0.5"
                android:fontFamily="@font/fira_sans"
                android:text="@string/contacts_type"
                android:textSize="12sp" />
        </LinearLayout>
        <Button
            android:id="@+id/btContactsStartDialog"
            android:layout_width="0dp"
            android:layout_height="60dp"
            style="@style/button_borderless"
            android:text="@string/phone"
            android:paddingEnd="90dp"
            android:fontFamily="@font/fira_sans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>